Matchmaking timer should reset on PlayerJoined

--- a/.gitignore
+++ b/.gitignore
@@ -51,8 +51,8 @@ SourceArt/**/*.png
 SourceArt/**/*.tga
 
 # Binary Files
-Binaries/*
-Plugins/*/Binaries/*
+Binaries/
+Plugins/*/Binaries/
 
 # Builds
 Build/*
@@ -72,8 +72,8 @@ Build/*/**
 Saved/*
 
 # Compiled source files for the engine to use
-Intermediate/*
-Plugins/*/Intermediate/*
+Intermediate/
+Plugins/*/Intermediate/
 
 # Cache files for the editor to use
 DerivedDataCache/*
